# leychile-epub

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
biblioteca_suseso/: indice_general.json
biblioteca_suseso/libro_1/: 1.1.1_definición.txt  1.1.2_denominación.txt  1.1.3_domicilio.txt  1.1_título_i_cajas_de_compensación_de_asignación_familiar.txt  1.2_título_ii_objeto.txt  1.3_título_iii_constitución.txt  1.4_título_iv_prohibiciones.txt  1.5.1_comisiones.txt  1.5.2_inversiones.txt  1.5_título_v_fondo_social.txt  1.6_título_vi_cotizaciones_previsionales.txt  1.7.1.10_acuerdos_de_directorio.txt  1.7.1.11_responsabilidad_del_directorio.txt  1.7.1.1_requisitos_para_ser_director_de_una_ccaf.txt  1.7.1.2_directores_suplentes.txt  1.7.1.3_fuero_de_directores_laborales.txt  1.7.1.4_dieta_directores.txt  1.7.1.5_término_de_la_calidad_de_director_de_una_ccaf.txt  1.7.1.6_funciones_del_directorio_de_una_ccaf.txt  1.7.1.7_presidente_del_directorio.txt  1.7.1.8_funciones_del_presidente_del_directorio.txt  1.7.1.9_sesiones_de_directorio.txt  1.7.1_directorio.txt  1.7.2.1_del_gerente_general_de_las_ccaf.txt  1.7.2.2_del_fiscal_de_la_ccaf.txt  1.7.2_alta_dirección_de_la_ccaf.txt  1.7_título_vii_administración_de_la_caja_de_compensación_de_asig.txt  1.8.1_intervención_de_una_ccaf.txt  1.8.2_disolución_de_una_ccaf.txt  1.8_título_viii_de_la_intervención_y_disolución.txt  1.9.1_constitución_y_modificaciones_de_sociedades_u_organismos_fil.txt  1.9.2_acuerdos_de_directorio.txt  1.9.3_estados_financieros.txt  1.9.4_otras_instrucciones.txt  1.9.5_información_sobre_sociedades_o_filiales.txt  1.9.6_anexos.txt  1.9_título_ix_constitución_y_fiscalización_de_sociedades_u_organ.txt  1_libro_i_descripción_general.txt  indice.json
biblioteca_suseso/libro_2/: 2.1.1.1.1_desarrollo_de_la_asamblea_de_afiliación_a_una_ccaf.txt  2.1.1.1_procedimiento_de_afiliación_presencial.txt  2.1.1.2.1_desarrollo_de_la_asamblea_de_desafiliación_de_una_ccaf.txt  2.1.8_anexos.txt  (+54 more)
biblioteca_xml/: aa_94_2015_recurso_proteccion.xml  codigo_aguas.xml  codigo_civil.xml  codigo_mineria.xml  codigo_penal.xml  codigo_proc_civil.xml  dfl_251_seguros_bolsas.xml  dfl_458_urbanismo.xml  dfl_707_cheques.xml  dl_211_libre_competencia.xml  dl_2695_regularizacion_propiedad.xml  dl_3475_timbres.xml  dl_3500_pensiones.xml  dl_825_iva.xml  indice.xml  ley_16744_accidentes_trabajo.xml  ley_17336_propiedad_intelectual.xml  ley_18046_sociedades_anonimas.xml  ley_18092_letra_pagare.xml  ley_18216_medidas_alternativas.xml  ley_18290_transito.xml  ley_18575_bases_administracion.xml  ley_18695_municipalidades.xml  ley_18834_estatuto_administrativo.xml  ley_18933_isapres.xml  ley_19696_codigo_procesal_penal.xml  ley_19799_firma_electronica.xml  ley_19886_compras_publicas.xml  ley_19947_matrimonio_civil.xml  ley_19968_tribunales_familia.xml  ley_19971_arbitraje_internacional.xml  ley_19983_factura_ejecutiva.xml  ley_20066_violencia_intrafamiliar.xml  ley_20084_responsabilidad_penal_adolescentes.xml  ley_20190_prenda_sin_desplazamiento.xml  ley_20285_acceso_informacion.xml  ley_20370_general_educacion.xml  ley_20393_responsabilidad_penal_personas_juridicas.xml  ley_20417_institucionalidad_ambiental.xml  ley_20545_postnatal_parental.xml  (+13 more)
docs/: ESQUEMA_XML_NORMAS.md  GUIA_CONVERSION_SUPERIR.md  api.md  cli.md  development.md  examples.md  index.md  installation.md  quickstart.md
normas_md/: NCG_420_Conducta_Mercado.md  constitucion.md  ley_18046_sociedades_anonimas.md  ley_19496_consumidor.md  ley_19628_proteccion_datos.md  ley_19880_procedimiento_administrativo.md  ley_20730_lobby.md
schemas/: ley_v1.xsd  superir_v1.xsd
scripts/: download_suseso.py  generar_biblioteca_xml.py  process_instructivos.py  process_ncg.py  regenerar_corregidas.py  reorganizar_biblioteca.py  validate_superir.py  xml_a_markdown.py
tests/: __init__.py  test_config.py  test_generator.py  test_instructivo_parser.py  test_integration.py  test_md_a_xml.py  test_ncg_parser.py  test_parser_vs_biblioteca.py  test_pdf_extractor.py  test_scraper.py  test_superir_base_parser.py  test_superir_structured_parser.py  test_superir_xml_generator.py
(+749 files in other folders)
