[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leychile-epub"
version = "1.3.0"
description = "🇨🇱 Generador de ePub para legislación chilena - Convert Chilean laws to professional eBooks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Luis Aguilera Arteaga", email = "luis@aguilera.cl"}
]
maintainers = [
    {name = "Luis Aguilera Arteaga", email = "luis@aguilera.cl"}
]
keywords = [
    "chile",
    "chilean-law",
    "epub",
    "ebook",
    "scraper",
    "bcn",
    "biblioteca-congreso-nacional",
    "leychile",
    "legislation",
    "legal",
    "epub-generator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Spanish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
    "altair>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
]
all = [
    "leychile-epub[web,dev]",
]

[project.scripts]
leychile-epub = "leychile_epub.cli:main"

[project.urls]
Homepage = "https://github.com/laguileracl/leychile-epub"
Documentation = "https://github.com/laguileracl/leychile-epub#readme"
Repository = "https://github.com/laguileracl/leychile-epub.git"
Issues = "https://github.com/laguileracl/leychile-epub/issues"
Changelog = "https://github.com/laguileracl/leychile-epub/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
leychile_epub = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["leychile_epub"]
skip = [".venv", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "W291",  # trailing whitespace (in multiline strings for HTML/CSS)
    "W293",  # blank line contains whitespace (in multiline strings)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "ebooklib.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/leychile_epub"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
